[project]
name = "master_instrument"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.11",
    "dagster-sling>=0.27.11",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "dagster-sling>=0.27.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "master_instrument"
registry_modules = [
    "master_instrument.components.*",
]


