[project]
name = "master_instrument"
requires-python = ">=3.9,<3.14"
version = "0.1.0"

dependencies = [
    "alembic>=1.16.5",
    "boto3>=1.40.69",
    "boto3-stubs>=1.40.69",
    "dagster==1.11.11",
    "dagster-dbt>=0.27.11",
    "dagster-postgres>=0.27.11",
    "dagster-sling>=0.27.11",
    "dagster-webserver>=1.11.11",
    "dbt-postgres>=1.9.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "dagster-sling>=0.27.11",
]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["master_instrument"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "master_instrument"
registry_modules = [
    "master_instrument.components.*",
]


